# coral

./: .gitignore  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  chatgpt-app-submission.json  clippy.toml  deny.toml  release-please-config.json
.agents/plugins/: marketplace.json
.agents/skills/generate-release-pr/: SKILL.md
.agents/skills/review-coral-source/: SKILL.md
.agents/skills/review-coral-source/agents/: openai.yaml
.github/: CODEOWNERS
.github/workflows/: build-timings.yml  discord-changelog.yml  release-please.yml  release.yml  validate.yml
.zed/: debug.json
crates/auth/aws/: Cargo.toml
crates/auth/aws/src/: lib.rs
crates/coral-api/: AGENTS.md  buf.yaml  build.rs
crates/coral-api/src/: lib.rs
crates/coral-app/: AGENTS.md  Cargo.toml  build.rs
crates/coral-app/src/: identity.rs  lib.rs  transport.rs
crates/coral-app/src/bootstrap/: env.rs  error.rs  mod.rs  server.rs
crates/coral-app/src/feedback/: manager.rs  mod.rs  publisher.rs  service.rs
crates/coral-app/src/query/: extensions.rs  manager.rs  mod.rs  service.rs
crates/coral-app/src/sources/: catalog.rs  manager.rs  mod.rs  model.rs  name.rs  service.rs
crates/coral-app/src/state/: config.rs  layout.rs  secrets.rs
crates/coral-app/src/storage/: fs.rs
crates/coral-app/src/telemetry/: config.rs  local_store.rs  metrics.rs  mod.rs  service.rs
crates/coral-app/src/workspaces/: mod.rs  name.rs
crates/coral-app/tests/: grpc.rs  telemetry_host_subscriber.rs  telemetry_local_trace_lifecycle.rs
crates/coral-app/tests/grpc/: harness.rs  resilience_tests.rs  server_lifecycle_tests.rs  source_lifecycle_tests.rs
crates/coral-cli/: AGENTS.md  Cargo.toml  build.rs
crates/coral-cli/src/: bootstrap.rs  branding.rs  browser.rs  embedded_ui.rs  env.rs  lib.rs  main.rs  onboard.rs  query_error.rs  source_ops.rs
crates/coral-cli/tests/: cli_e2e.rs  lint.rs  mcp.rs  onboard.rs  source.rs
crates/coral-cli/tests/harness/: mod.rs
crates/coral-client/: Cargo.toml
crates/coral-client/src/: client.rs  error.rs  grpc.rs  lib.rs  local.rs  propagation.rs  status_error.rs
crates/coral-engine/: Cargo.toml
crates/coral-engine/src/: composition.rs  lib.rs
crates/coral-engine/src/backends/: common.rs  mod.rs
crates/coral-engine/src/contracts/: catalog.rs  error.rs  mod.rs  query.rs  query_error.rs
crates/coral-engine/src/runtime/: catalog.rs  error.rs  json.rs  mod.rs  pattern_validator.rs  query.rs  registry.rs  schema_provider.rs  source_functions.rs
crates/coral-engine/tests/: engine.rs
crates/coral-engine/tests/engine/: catalog_tests.rs  harness.rs  http_tests.rs  json_tests.rs  jsonl_tests.rs  parquet_tests.rs  pattern_error_tests.rs  query_result_observer_tests.rs  structured_error_tests.rs  test_source_tests.rs
crates/coral-mcp/: Cargo.toml
crates/coral-mcp/src/: guide_template.md  lib.rs  server.rs  telemetry.rs  tests.rs
crates/coral-mcp/src/surface/: discovery.rs  errors.rs  mod.rs  resources.rs  tools.rs
crates/coral-spec/src/: common.rs  inputs.rs  lib.rs  loader.rs  parser.rs  template.rs  validate.rs
crates/coral-spec/src/backends/: file.rs  http.rs
docs/: AGENTS.md  docs.json  global.css  index.mdx  legal.mdx
docs/contributors/: architecture.mdx
docs/getting-started/: installation.mdx  quickstart.mdx
docs/guides/: observe-with-opentelemetry.mdx  use-coral-over-mcp.mdx  write-a-custom-source.mdx
docs/legal/: cla-corporate.mdx  cla-individual.mdx
docs/project/: architecture.mdx  roadmap.mdx  security.mdx
docs/reference/: bundled-sources.mdx  cli-reference.mdx  source-spec-reference.mdx
plugins/coral/: .mcp.json
plugins/coral/.codex-plugin/: plugin.json
sources/clickup/: manifest.yaml
sources/cloudwatch_logs/: manifest.yaml
sources/cloudwatch_metrics/: manifest.yaml
sources/community/cal/: README.md  manifest.yaml
sources/community/clickhouse/: README.md  manifest.yaml
sources/community/crates_io/: README.md  manifest.yaml
sources/community/fly/: README.md  manifest.yaml
sources/community/hn/: manifest.yaml
sources/community/neondb/: README.md  manifest.yaml
sources/community/netlify/: README.md  manifest.yaml
sources/community/osv/: README.md  manifest.yaml
sources/community/postman/: README.md  manifest.yaml
sources/confluence/: README.md  manifest.yaml
sources/core/cloudwatch_logs/: manifest.yaml
sources/core/confluence/: README.md  manifest.yaml
sources/core/incident_io/: manifest.yaml
sources/core/intercom/: manifest.yaml
sources/core/jira/: README.md  manifest.yaml
sources/core/launchdarkly/: manifest.yaml
sources/core/linear/: manifest.yaml
sources/core/notion/: README.md
sources/core/pagerduty/: manifest.yaml
sources/core/sentry/: manifest.yaml
sources/datadog/: manifest.yaml
sources/github/: README.md
sources/gitlab/: manifest.yaml
sources/grafana/: manifest.yaml
sources/incident_io/: manifest.yaml
sources/intercom/: manifest.yaml
sources/jira/: README.md  manifest.yaml
sources/launchdarkly/: manifest.yaml
sources/linear/: manifest.yaml
sources/notion/: manifest.yaml
sources/openobserve/: README.md  manifest.yaml
sources/pagerduty/: manifest.yaml
sources/posthog/: manifest.yaml
sources/sentry/: manifest.yaml
sources/slack/: manifest.yaml
sources/statusgator/: manifest.yaml
sources/stripe/: manifest.yaml
sources/wandb/: manifest.yaml
ui/: .gitignore  buf.gen.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  app.css.ts  index.css  main.ts  main.tsx  styles.css
ui/src/components/: shell.css.ts  shell.tsx
ui/src/lib/: coral-traces-client.ts  sql-highlight.ts
ui/src/styles/: theme.ts  utils.ts
ui/src/utils/: compose-refs.ts  use-truncation-detection.ts
ui/src/views/: Placeholder.tsx  TracesPage.tsx  placeholder.css.ts  traces-page.css.ts
xtask/: Cargo.toml
xtask/src/: detect.rs  main.rs  nav.rs  render.rs
xtask/src/snapshots/: xtask__nav__tests__docs_json_nav_update.snap  xtask__render__tests__index_page_renders_rows.snap
(+77 files in other folders)
