[workspace]
members = ["crates/coral-*", "crates/auth/*", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.1" # x-release-please-version
license = "Apache-2.0"
rust-version = "1.95"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
# enforcement
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
# don't panic
unwrap_used = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
indexing_slicing = "warn"
string_slice = "warn"
panic_in_result_fn = "warn"
unchecked_time_subtraction = "warn"
# don't fail silently
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
# easy wins
dbg_macro = "warn"
mem_forget = "warn"
rc_mutex = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
disallowed_methods = "deny"
print_stderr = "warn"
print_stdout = "warn"

[workspace.dependencies]
assert_cmd = "2"
anyhow = "1"
arrow = "58.1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
datafusion = "53"
datafusion-functions-json = "0.53"
datafusion-tracing = "53.0.1"
dialoguer = "0.12"
etcetera = "0.11"
fs2 = "0.4"
futures = "0.3"
glob = "0.3"
http-body = "1"
httpdate = "1.0.3"
jsonschema = { version = "0.18", default-features = false }
object_store = { version = "0.13.2", features = ["aws"] }
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
parquet = { version = "58.1.0", features = ["arrow"] }
prost = "0.14.1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls-native-roots", "system-proxy"] }
regex = "1"
rmcp = { version = "1.3.0", features = ["client"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sqlparser = "0.59.0"
strsim = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9"
toml_edit = "0.25.10"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-types = "0.14.2"
tonic-web = "0.14.5"
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
wiremock = "0.6"

coral-api = { path = "crates/coral-api" }
coral-app = { path = "crates/coral-app" }
coral-cli = { path = "crates/coral-cli" }
coral-client = { path = "crates/coral-client" }
coral-engine = { path = "crates/coral-engine" }
coral-mcp = { path = "crates/coral-mcp" }
coral-spec = { path = "crates/coral-spec" }

[profile.dev]
debug = 2
opt-level = 0
