[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pulldown-cmark = { version = "0.13", default-features = false }
serde_json.workspace = true
walkdir.workspace = true

coral-spec.workspace = true

[dev-dependencies]
insta = "1"
