[package]
name = "coral-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arrow.workspace = true
axum.workspace = true
chrono.workspace = true
etcetera.workspace = true
fs2.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
toml.workspace = true
toml_edit.workspace = true
tonic.workspace = true
tonic-types.workspace = true
tonic-web.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

coral-api.workspace = true
coral-auth-aws = { path = "../auth/aws" }
coral-engine.workspace = true
coral-spec.workspace = true

[dev-dependencies]
coral-client.workspace = true
prost.workspace = true
opentelemetry_sdk = { workspace = true, features = ["testing"] }
reqwest.workspace = true
tempfile.workspace = true
tokio.workspace = true

[build-dependencies]
serde_yaml.workspace = true
